--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,14 +22,14 @@
         "react-doc-viewer": "^0.1.5",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
-        "react-particles": "^2.12.2",
-        "react-router-dom": "^6.17.0",
-        "tsparticles-engine": "^2.12.0",
-        "tsparticles-slim": "^2.12.0"
+        "react-modal-image": "^2.6.0",
+        "react-multi-carousel": "^2.8.4",
+        "react-router-dom": "^6.17.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/react-modal-image": "^2.6.3",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.0.3",
